Ensure annotations do not overflow viewport on mobile

--- a/src/app/styles/components/annotation/_annotation.scss
+++ b/src/app/styles/components/annotation/_annotation.scss
@@ -1,11 +1,10 @@
 .annotation {
   border-top: $layout-border-light;
-
   padding: 15px 0;
-
   display: flex;
   font-size: $annotation-font-size;
   position: relative;
+  overflow-x: hidden;
 }
 
 .annotation__avatar {
